Camera control added

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/js/vendor/three.min.js"></script>
     <script src="/js/vendor/TweenMax.min.js"></script>
+    <script src="/js/2-svg-loader/SVGLoader.js"></script>
+    <script src="/js/2-svg-loader/MapControls.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/main.css" />
     <title>Document</title>
   </head>
   <body>
-    <script src="js/scene.js"></script>
+    <script src="js/2-svg-loader/index.js"></script>
   </body>
 </html>
